// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnsibleRolesSwitcherSelectors should return all roles when no roles assigned 1`] = `
Array [
  Object {
    "id": 1,
    "name": "sthirugn.motd",
  },
  Object {
    "id": 2,
    "name": "jtyr.ntp",
  },
  Object {
    "id": 3,
    "name": "rvm.ruby",
  },
  Object {
    "id": 4,
    "name": "geerlingguy.java",
  },
]
`;

exports[`AnsibleRolesSwitcherSelectors should return requested page 1`] = `
Array [
  Object {
    "id": 6,
    "name": "theforeman.foreman_scap_client",
  },
  Object {
    "id": 7,
    "name": "ansible.ansible",
  },
  Object {
    "id": 8,
    "name": "puppet.puppet",
  },
  Object {
    "id": 9,
    "name": "chef.chef",
  },
  Object {
    "id": 10,
    "name": "salt.salt",
  },
]
`;

exports[`AnsibleRolesSwitcherSelectors should return unassigned roles 1`] = `
Array [
  Object {
    "id": 1,
    "name": "sthirugn.motd",
  },
  Object {
    "id": 3,
    "name": "rvm.ruby",
  },
]
`;
